crates/lemnos-macros-tests/tests/ui/driver_unspecified_kind.stderr
error: `#[driver(kind = Unspecified)]` is not supported; omit `kind` instead
  --> tests/ui/driver_unspecified_kind.rs:12:12
   |
12 |     kind = Unspecified
   |            ^^^^^^^^^^^
